--- a/styles/main.css
+++ b/styles/main.css
@@ -13,13 +13,20 @@
     background: url('../images/banner.JPG');
     background-size: cover; */
 }
+
+.information{
+    margin: 3px;
+    box-shadow: 0px 2px 0px gray;
+    /* border: 1px solid red; */
+}
+
 .heading{
     border-bottom: 3px solid rgb(222, 236, 203);
    border-width: 10px;
     font-size: 28px;
     font-weight: bolder;
     text-shadow: 1px 2px rgba(0,0,0,.1);
-    margin-top: 40px;
+    margin-top: 20px;
    
 }
 .heading:hover{
